--- a/_assets/css/__modules/_controls.scss
+++ b/_assets/css/__modules/_controls.scss
@@ -1,15 +1,24 @@
 .controls {
-  width: $main-width;
-  margin: -113px auto 0;
-  position: relative;
-  z-index: 1;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 30px;
+  min-width: $second-width;
   
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  justify-content: space-between;
+  &__wrapper {
+    max-width: $main-width;
+    
+    margin: -113px auto 0;
+    position: relative;
+    z-index: 1;
+
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+  }
+  
   
   &__counter {
     list-style-type: none;
