--- a/_assets/css/__modules/_header.scss
+++ b/_assets/css/__modules/_header.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
-  min-width: $main-width + 20;
+  min-width: $second-width;
   min-height: 500px;
   
   overflow: hidden;
