--- a/_assets/css/__modules/_programs.scss
+++ b/_assets/css/__modules/_programs.scss
@@ -1,13 +1,13 @@
 .c-programs {
   box-sizing: border-box;
   width: 100%;
-  min-width: $main-width + 20;
-  padding-top: 100px;
-  padding-bottom: 82px;
+  padding: 100px 30px 82px;
+  min-width: $second-width;
 }
 
 .programs {
-  width: $main-width;
+  max-width: $main-width;
+  
   margin: 0 auto;
   list-style-type: none;
   
@@ -16,11 +16,13 @@
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  justify-content: space-between;
   
   &__item {
     display: block;
-    
+    margin-right: 13px;
+    &:last-child {
+      margin-right: 0;
+    }
     
   }
   
@@ -36,7 +38,7 @@
     
     box-sizing: border-box;
     padding: 48px;
-    width: 331px;
+    max-width: 331px;
     height: 600px;
     
     background-color: #000;
@@ -82,7 +84,6 @@
     margin-bottom: 25px;
   }
   &__text {
-    height: 96px;
     @include raleway(16px, 400, 24px);
     -webkit-font-smoothing: antialiased;
     color: rgba(#fff, 0.4);
