--- a/_assets/css/__modules/_slider.scss
+++ b/_assets/css/__modules/_slider.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   min-height: 500px;
   width: 400%;
-  min-width: $main-width * 4;
+  min-width: $second-width * 4;
   position: relative;
   z-index: 0;
   left: 0;
@@ -28,13 +28,28 @@
     min-height: 500px;
     
     overflow: hidden;
-    min-width: $main-width;
     width: 100%;
-    
+    box-sizing: border-box;
+    padding: 0 30px;
     height: 100vh;
     background-color: #000;
     background-image: url(../img/_header/slide_bg_1.jpg);
     background-size: cover;
     background-position: center top;
+  }
+}
+
+.hero {
+  width: 100%;
+  &__caption {
+    @include raleway(82px, 500, 98px);
+    color: #fff;
+    max-width: 680px;
+    margin-left: -6px;
+  }
+  &__text {
+    @include raleway(16px, 400, 28px);
+    color: rgba(#fff, 0.4);
+    max-width: 680px;
   }
 }
