--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -46,8 +46,9 @@ html, body {
 .menu {
   box-sizing: border-box;
   width: 100%;
-  padding: 0 30px; }
-  .menu__wrapeer {
+  padding: 0 30px;
+  min-width: 960px; }
+  .menu__wrapper {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -57,13 +58,12 @@ html, body {
     position: relative;
     z-index: 1;
     max-width: 1360px;
-    min-width: 960px;
     height: 47px;
     margin: 0 auto;
     padding-top: 60px; }
-  .menu--is-black {
-    padding: 18px 0;
-    background-color: #000; }
+    .menu__wrapper--is-black {
+      padding: 18px 0;
+      background-color: #000; }
   .menu__logo {
     flex-grow: 1;
     width: 117px;
@@ -164,7 +164,6 @@ html, body {
   height: 100vh;
   min-height: 500px;
   width: 400%;
-  min-width: 3840px;
   position: relative;
   z-index: 0;
   left: 0;
@@ -179,16 +178,22 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 500px;
-    overflow: hidden;
-    width: 100%;
     box-sizing: border-box;
-    padding: 0 30px;
+    overflow: hidden;
+    width: 100vw;
+    min-width: 960px;
+    min-height: 500px;
     height: 100vh;
+    padding: 0 30px;
     background-color: #000;
-    background-image: url(../img/_header/slide_bg_1.jpg);
     background-size: cover;
     background-position: center top; }
+    .slider__slide--is-first {
+      background-image: url(../img/_header/slide_bg_1.jpg); }
+    .slider__slide--is-second {
+      background-image: url(../img/_header/slide_bg_2.jpg); }
+    .slider__slide--is-third {
+      background-image: url(../img/_header/slide_bg_3.jpg); }
 
 .hero {
   width: 100%; }
@@ -313,7 +318,6 @@ html, body {
 
 .caption {
   max-width: 1360px;
-  min-width: 960px;
   margin: 0 auto 20px;
   display: -webkit-flex;
   display: -moz-flex;
@@ -425,13 +429,13 @@ html, body {
     text-align: center; }
 
 .c-gallery {
+  box-sizing: border-box;
   background-color: #f3f3f3;
   padding: 100px 30px 60px;
   min-width: 960px; }
 
 .gallery {
   max-width: 1360px;
-  min-width: 960px;
   margin: 0 auto;
   display: -webkit-flex;
   display: -moz-flex;
@@ -462,7 +466,7 @@ html, body {
     display: block;
     width: 100%;
     max-width: 331px;
-    min-width: 230px; }
+    min-width: 215px; }
 
 .seemore {
   max-width: 1360px;
@@ -493,6 +497,7 @@ html, body {
       color: #fff; }
 
 .c-footer {
+  box-sizing: border-box;
   background-color: #242424;
   padding: 60px 30px 65px;
   min-width: 960px; }
@@ -608,21 +613,25 @@ html, body {
         background-image: url('data:image/svg+xml;utf-8,<svg enable-background="new 0 0 24 24" viewBox="0 0 24 24" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg"><path d="m13.313 8.319v1.665h2.516l-.328 2.608h-2.188v6.691h-2.625v-6.691h-2.194v-2.608h2.194v-1.923c0-2.232 1.329-3.447 3.269-3.447.929 0 1.728.071 1.96.103v2.332l-1.345.001c-1.055 0-1.259.514-1.259 1.269z" fill="#fff"/><path d="m17 24h-10c-3.86 0-7-3.141-7-7v-10c0-3.86 3.14-7 7-7h10c3.859 0 7 3.14 7 7v10c0 3.859-3.141 7-7 7zm-10-22c-2.757 0-5 2.243-5 5v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5v-10c0-2.757-2.243-5-5-5z" fill="#fff"/></svg>'); }
 
 .c-article {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  min-width: 960px; }
   .c-article--is-yoga {
     background-image: url(../img/_yoga/yoga_bg.jpg);
     background-position: -600px 0;
-    background-size: 1460px;
+    background-size: cover;
     background-repeat: no-repeat; }
 
 .article {
   box-sizing: border-box;
-  width: 1360px;
+  max-width: 1360px;
   margin: 0 auto;
   padding-left: 343px; }
   .article__wrapper {
     background-color: #fff;
     padding: 115px 166px 66px; }
+    @media screen and (max-width: 1359px) {
+      .article__wrapper {
+        padding: 115px 83px 66px; } }
   .article__lead {
     font-family: "Raleway", sans-serif;
     font-size: 20px;
@@ -655,7 +664,10 @@ html, body {
   list-style-type: none; }
   .shedule__item {
     display: block;
-    width: 161px; }
+    width: 161px;
+    margin-right: 13px; }
+    .shedule__item:last-child {
+      margin-right: 0; }
     .shedule__item:first-child .shedule__date, .shedule__item:first-child .shedule__type, .shedule__item:first-child .shedule__trainer {
       padding-left: 0;
       border-left: 0; }
