--- a/_assets/css/style.scss
+++ b/_assets/css/style.scss
@@ -19,4 +19,4 @@ html, body {
 @import '__modules/programs';
 @import '__modules/gallery';
 @import '__modules/footer';
-@import '__modules/article.scss';
+@import '__modules/article';
