--- a/_assets/css/__modules/_menu.scss
+++ b/_assets/css/__modules/_menu.scss
@@ -80,10 +80,10 @@
     padding: 17px 20px;
     display: block;
     
-    transition: background-color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
     
     &:hover {
-      background-color: rgba(#fff, 0.2);
+      color: $primary-color;
     }
     
   }
@@ -98,10 +98,10 @@
     
     cursor: pointer;
     
-    transition: background-color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
     
     &:hover {
-      background-color: rgba(#fff, 0.2);
+      color: rgba($primary-color, 0.8);
     }
     
     &--is-hidden {
