--- a/_assets/css/__modules/_slider.scss
+++ b/_assets/css/__modules/_slider.scss
@@ -7,7 +7,7 @@
   
   height: 100vh;
   min-height: 500px;
-  width: 400%;
+  width: 400vw;
   //min-width: $second-width * 4;
   
   position: relative;
@@ -54,6 +54,7 @@
 }
 
 .hero {
+  max-width: $main-width;
   width: 100%;
   &__caption {
     @include raleway(82px, 500, 98px);
